--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
 
   <!-- include source files here... -->
+  <script type="text/javascript" src="src/Debug.js"></script>
   <script type="text/javascript" src="src/Functions.js"></script>
   <script type="text/javascript" src="src/ModuleManagement.js"></script>
 
