--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Jasmine Spec Runner v2.0.0</title>
+  <title>js-tools Jasmine Spec Runner</title>
 
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.0.0/jasmine_favicon.png">
   <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0/jasmine.css">
@@ -15,14 +15,13 @@
   <script type="text/javascript" src="src/Debug.js"></script>
   <script type="text/javascript" src="src/Functions.js"></script>
   <script type="text/javascript" src="src/ModuleManagement.js"></script>
+  <script type="text/javascript" src="src/ClassBase.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
   <script type="text/javascript" src="spec/FunctionsSpec.js"></script>
   <script type="text/javascript" src="spec/ModuleManagementSpec.js"></script>
-  
-  
-  
+  <script type="text/javascript" src="spec/ClassBaseSpec.js"></script>
 
 </head>
 
