use mixin instead of a real class hierarchy

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,12 +16,19 @@
   <script type="text/javascript" src="src/Functions.js"></script>
   <script type="text/javascript" src="src/ModuleManagement.js"></script>
   <script type="text/javascript" src="src/ClassBase.js"></script>
+  <script>
+    var mixinOptions = {
+        isCheckAbstractImplementations: true
+    };
+  </script>
+  <script type="text/javascript" src="src/mixin.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
   <script type="text/javascript" src="spec/FunctionsSpec.js"></script>
   <script type="text/javascript" src="spec/ModuleManagementSpec.js"></script>
   <script type="text/javascript" src="spec/ClassBaseSpec.js"></script>
+  <script type="text/javascript" src="spec/mixinSpec.js"></script>
 
 </head>
 
