code format and specs rewritten

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>js-tools Jasmine Spec Runner</title>
+  <title>js-tools Spec Runner</title>
 
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.0.0/jasmine_favicon.png">
   <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0/jasmine.css">
@@ -18,7 +19,7 @@
   <script type="text/javascript" src="src/ClassBase.js"></script>
   <script>
     var mixinOptions = {
-        isCheckAbstractImplementations: true
+      isCheckAbstractImplementations: true
     };
   </script>
   <script type="text/javascript" src="src/mixin.js"></script>
@@ -34,4 +35,5 @@
 
 <body>
 </body>
+
 </html>
